--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -84,3 +84,15 @@ input {
   display: flex;
   flex-direction: column;
 }
+
+.faucetBalance {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  font-size: .9em;
+  margin-top: 10px;
+  padding: 0.75rem;
+  background-color: #f4f6f8;
+}
